--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -36,7 +36,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                     $avatar_user = json_decode($this->arrUserList[$arrContent['user_created']]['user_avatar'], true)[0]['thumbImage']['30x30'];
                                                     $flag = true;
                                                 }
-                                                $description = (strlen($arrContent['cont_detail_text']) > 400) ? substr('freetuts.net', 0, 400) . '...' : $arrContent['cont_detail_text'];
+                                                $description = (strlen($arrContent['cont_detail_text']) > 400) ? substr($arrContent['cont_detail_text'], 0, 400) . '...' : $arrContent['cont_detail_text'];
                                                 ?>
                                                 <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                     <td style="vertical-align: middle">
@@ -163,7 +163,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                 $avatar_user = json_decode($this->arrUserList[$arrContent['user_created']]['user_avatar'], true)[0]['thumbImage']['30x30'];
                                                 $flag = true;
                                             }
-                                            $description = (strlen($arrContent['cont_detail_text']) > 400) ? substr('freetuts.net', 0, 400) . '...' : $arrContent['cont_detail_text'];
+                                            $description = (strlen($arrContent['cont_detail_text']) > 400) ? substr($arrContent['cont_detail_text'], 0, 400) . '...' : $arrContent['cont_detail_text'];
                                             ?>
                                             <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                 <td style="vertical-align: middle">
