--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -40,24 +40,20 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                 ?>
                                                 <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                     <td style="vertical-align: middle">
-                                                        <div class="col-md-1">
-                                                            <?php if ($flag == true): ?>
-                                                                <a href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
-                                                                    <img src="<?php echo $avatar_user; ?>" style="width: 30px; height: 30px">
-                                                                </a>
-                                                            <?php else: ?>
-                                                                <a href="javascript:;" class="red-tooltip" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
-                                                                    <img src="<?php echo $avatar_user; ?>" style="width: 30px; height: 30px">
-                                                                </a>
-                                                            <?php endif; ?>
-                                                        </div>
-                                                        <div class="col-md-11" style="margin-top: 5px;">
-                                                            <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $description; ?>" class="red-tooltip color-red" style="text-decoration: none;">
-                                                                <b><?php echo $arrContent['cont_title']; ?></b>
+                                                        <?php if ($flag == true): ?>
+                                                            <a style="text-decoration: none" href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip mg-r-5" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
+                                                                <img src="<?php echo $avatar_user; ?>" style="width: 30px; height: 30px">
                                                             </a>
-                                                            <span class="color-view">(<i class="fa fa-eye"> <?php echo $arrContent['cont_views']; ?></i>)</span>
-                                                            <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
-                                                        </div>
+                                                        <?php else: ?>
+                                                            <a style="text-decoration: none" href="javascript:;" class="red-tooltip" data-toggle="tooltip" title="<?php echo json_decode($arrContent['user_info'], true)['user_fullname']; ?>">
+                                                                <img src="<?php echo $avatar_user; ?>" style="width: 30px; height: 30px">
+                                                            </a>
+                                                        <?php endif; ?>
+                                                        <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $description; ?>" class="red-tooltip color-red mg-r-5" style="text-decoration: none;">
+                                                            <b><?php echo $arrContent['cont_title']; ?></b>
+                                                        </a>
+                                                        <span class="color-view">(<i class="fa fa-eye"> <?php echo $arrContent['cont_views']; ?></i>)</span>
+                                                        <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                                                     </td>
                                                     <td class="text-center" style="vertical-align: middle">
                                                         <a href="javascript:;" style="text-decoration: none;color: #69A467"><b><?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $arrLocation[$arrContent['dist_id']]['dist_name']; ?></b></a>
