--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -285,117 +285,11 @@
                 </div><!--end related ads-->
 
             </div>
+            
             <div class="col-md-4">
-                <div class="sidebar">
-                    <div class="side-widget clearfix">
-                        <h4 class="inner-heading">PREMIUM ADs</h4>
-                        <div class="col-md-12 col-sm-4">
-                            <div class="premium-widget">
-                                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg1_03.png">
-                                <a href="#" class="item-hover"><span>$199</span></a>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-sm-4">
-                            <div class="premium-widget">
-                                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg2_03.png">
-                                <a href="#" class="item-hover"><span>$199</span></a>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-sm-4">
-                            <div class="premium-widget">
-                                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg3_03.png">
-                                <a href="#" class="item-hover"><span>$199</span></a>
-                            </div>
-                        </div>
-                    </div><!--end premium widget-->
-
-                    <div class="side-widget">
-                        <h4 class="inner-heading">Latest ADs</h4>
-                        <div class="sidebar-latest-ad">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img1_03.png" alt="side ads">
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><a href="#" class="col"> M26r Car 2014</a></p>
-                                    <p>$40,000</p>
-                                    <p>Condition 10/10 & fully original all parts...</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sidebar-latest-ad">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img2_03.png" alt="side ads">
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><a href="#" class="col"> M26r Car 2014</a></p>
-                                    <p>$40,000</p>
-                                    <p>Condition 10/10 & fully original all parts...</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sidebar-latest-ad">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img3_03.png" alt="side ads">
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><a href="#" class="col"> M26r Car 2014</a></p>
-                                    <p>$40,000</p>
-                                    <p>Condition 10/10 & fully original all parts...</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="sidebar-latest-ad">
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img4_03.png" alt="side ads">
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><a href="#" class="col"> M26r Car 2014</a></p>
-                                    <p>$40,000</p>
-                                    <p>Condition 10/10 & fully original all parts...</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!--end latest ad widget-->
-
-                    <!--advertisement-->
-                    <div class="side-widget">
-                        <h4 class="inner-heading">ADVERTISEMENT</h4>
-                        <div class="side-widget-adv">
-                            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-                        </div>
-                    </div><!--end advertisement widget-->
-
-                    <!--Tags-->
-                    <div class="side-widget">
-                        <h4 class="inner-heading">Tags</h4>
-                        <div class="tags">
-                            <a href="#">Ads</a>
-                            <a href="#">Design</a>
-                            <a href="#">Classified</a>
-                            <a href="#">PSD’s</a>
-                            <a href="#">Advertisement</a>
-                            <a href="#">Jobs</a>
-                            <a href="#">Community</a>
-                            <a href="#">Business</a>
-                            <a href="#">Interior</a>
-                            <a href="#">Condo</a>
-                            <a href="#">Pet</a>
-                            <a href="#">Shopping</a>
-                            <a href="#">Clothing</a>
-                            <a href="#">Vehicles</a>
-
-
-                        </div>
-                    </div><!--end tags widget-->
-                </div>
+                <?php echo $this->render('frontend/nav-ads-right'); ?>
             </div>
+            
         </div>
     </div>
 </section><!--end details-->
