--- a/module/Frontend/view/v1/frontend/content/add.phtml
+++ b/module/Frontend/view/v1/frontend/content/add.phtml
@@ -181,39 +181,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="sidebar">
-
-                            <!--advertisement-->
-                            <div class="side-widget">
-                                <h4 class="inner-heading">ADVERTISEMENT</h4>
-                                <div class="side-widget-adv">
-                                    <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-                                </div>
-                            </div><!--end advertisement widget-->
-
-                            <!--Tags-->
-                            <div class="side-widget">
-                                <h4 class="inner-heading">Tags</h4>
-                                <div class="tags">
-                                    <a href="#">Ads</a>
-                                    <a href="#">Design</a>
-                                    <a href="#">Classified</a>
-                                    <a href="#">PSD’s</a>
-                                    <a href="#">Advertisement</a>
-                                    <a href="#">Jobs</a>
-                                    <a href="#">Community</a>
-                                    <a href="#">Business</a>
-                                    <a href="#">Interior</a>
-                                    <a href="#">Condo</a>
-                                    <a href="#">Pet</a>
-                                    <a href="#">Shopping</a>
-                                    <a href="#">Clothing</a>
-                                    <a href="#">Vehicles</a>
-
-
-                                </div>
-                            </div><!--end tags widget-->
-                        </div>
+                        <?php echo $this->render('frontend/nav-ads-right'); ?>
                     </div>
                 </div>
             </div>
