--- a/module/Frontend/view/v1/layout/nav-ads-right.phtml
+++ b/module/Frontend/view/v1/layout/nav-ads-right.phtml
@@ -6,6 +6,21 @@
         <div class="side-widget-adv">
             <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
         </div>
+        <div class="side-widget-adv">
+            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+        </div>
+        <div class="side-widget-adv">
+            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+        </div>
+        <div class="side-widget-adv">
+            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+        </div>
+        <div class="side-widget-adv">
+            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+        </div>
+        <div class="side-widget-adv">
+            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
+        </div>
     </div><!--end advertisement widget-->
 
     <!--Tags-->
