--- a/module/Frontend/view/v1/layout/nav-ads-right.phtml
+++ b/module/Frontend/view/v1/layout/nav-ads-right.phtml
@@ -1,23 +1,84 @@
 <div class="sidebar">
+    <div class="side-widget clearfix">
+        <h4 class="inner-heading">PREMIUM ADs</h4>
+        <div class="col-md-12 col-sm-4">
+            <div class="premium-widget">
+                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg1_03.png">
+                <a href="#" class="item-hover"><span>$199</span></a>
+            </div>
+        </div>
+        <div class="col-md-12 col-sm-4">
+            <div class="premium-widget">
+                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg2_03.png">
+                <a href="#" class="item-hover"><span>$199</span></a>
+            </div>
+        </div>
+        <div class="col-md-12 col-sm-4">
+            <div class="premium-widget">
+                <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/sideimg3_03.png">
+                <a href="#" class="item-hover"><span>$199</span></a>
+            </div>
+        </div>
+    </div><!--end premium widget-->
+
+    <div class="side-widget">
+        <h4 class="inner-heading">Latest ADs</h4>
+        <div class="sidebar-latest-ad">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img1_03.png" alt="side ads">
+                </div>
+                <div class="col-sm-8">
+                    <p><a href="#" class="col"> M26r Car 2014</a></p>
+                    <p>$40,000</p>
+                    <p>Condition 10/10 & fully original all parts...</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="sidebar-latest-ad">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img2_03.png" alt="side ads">
+                </div>
+                <div class="col-sm-8">
+                    <p><a href="#" class="col"> M26r Car 2014</a></p>
+                    <p>$40,000</p>
+                    <p>Condition 10/10 & fully original all parts...</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="sidebar-latest-ad">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img3_03.png" alt="side ads">
+                </div>
+                <div class="col-sm-8">
+                    <p><a href="#" class="col"> M26r Car 2014</a></p>
+                    <p>$40,000</p>
+                    <p>Condition 10/10 & fully original all parts...</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="sidebar-latest-ad">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="<?php echo STATIC_URL; ?>/f/v1/images/images/side-latest-ad-img4_03.png" alt="side ads">
+                </div>
+                <div class="col-sm-8">
+                    <p><a href="#" class="col"> M26r Car 2014</a></p>
+                    <p>$40,000</p>
+                    <p>Condition 10/10 & fully original all parts...</p>
+                </div>
+            </div>
+        </div>
+    </div><!--end latest ad widget-->
 
     <!--advertisement-->
     <div class="side-widget">
         <h4 class="inner-heading">ADVERTISEMENT</h4>
-        <div class="side-widget-adv">
-            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-        </div>
-        <div class="side-widget-adv">
-            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-        </div>
-        <div class="side-widget-adv">
-            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-        </div>
-        <div class="side-widget-adv">
-            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-        </div>
-        <div class="side-widget-adv">
-            <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
-        </div>
         <div class="side-widget-adv">
             <a href="#"><img src="<?php echo STATIC_URL; ?>/f/v1/images/images/advertiseimg_03.png" alt="google ads"></a>
         </div>
