--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -20,6 +20,10 @@
                     if (!empty($this->arrContent['cont_image']) && $this->arrContent['cont_image'] != 'null'):
                         $arrImage = json_decode($this->arrContent['cont_image']);
                         $href_user = 'javascript:;';
+                        echo '<pre>';
+                        print_r($href_user);
+                        echo '</pre>';
+                        die();
                         if (!empty($this->arrContent['user_created'])) {
                             $href_user = $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUser['user_fullname']), 'userId' => $this->arrUser['user_id']]);
                         }
