--- a/module/Frontend/view/v1/frontend/content/detail.phtml
+++ b/module/Frontend/view/v1/frontend/content/detail.phtml
@@ -103,7 +103,7 @@
                                                 <a class="btn btn-success modal-confirm-pass" data-toggle="tooltip" title="Sửa tin">
                                                     <i class="fa fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-success" data-toggle="tooltip" title="Xóa tin">
+                                                <a class="btn btn-success delete-content" data-toggle="tooltip" title="Xóa tin">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             <?php endif; ?>
@@ -247,7 +247,7 @@
                         ?>
                     </section>
                 </div>
-                <div class="fb-comments" data-href="<?php // echo $this->serverUrl() . $this->Url('product', array('productslug' => $this->arrProductDetail["prod_slug"], 'productId' => $this->arrProductDetail["prod_id"]))                                                                                                                           ?>" data-width="100%" data-numposts="5"></div>
+                <div class="fb-comments" data-href="<?php // echo $this->serverUrl() . $this->Url('product', array('productslug' => $this->arrProductDetail["prod_slug"], 'productId' => $this->arrProductDetail["prod_id"]))                                                                                                                                 ?>" data-width="100%" data-numposts="5"></div>
 
                 <!--Related Ads-->
                 <div id="relatedAds">
@@ -342,6 +342,29 @@ if (empty($this->arrContent['user_created'])):
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="ModalConfirmPass">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">Mật khẩu để sửa tin</h4>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <b class="error-delete" style="color: red; display: none"></b>
+                            <input class="form-control" id="pass-delete" type="password"> 
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Hủy</button>
+                    <button type="button" class="btn btn-success confirm-delete">Xác nhận</button>
+                </div>
+            </div>
+        </div>
+    </div>
 <?php endif; ?>
 <?php if (empty(CUSTOMER_ID)): ?>
     <div class="modal fade" id="ModalUpVip" tabindex="-1" role="dialog" aria-labelledby="ModalUpVip">
@@ -399,5 +422,6 @@ if (empty($this->arrContent['user_created'])):
     sendMessagesURL = '<?php echo $this->serverUrl() . $this->Url('content', array('action' => 'send-messages')); ?>';
     addCommentURL = '<?php echo $this->serverUrl() . $this->Url('add-comment'); ?>';
     confirmPassContURL = '<?php echo $this->serverUrl() . $this->Url('confirm-pass-content'); ?>';
+    deleteContentURL = '<?php echo $this->serverUrl() . $this->Url('content', ['action' => 'delete-content']); ?>';
     Content.detail();
 </script>
