--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -53,13 +53,22 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         </script>
 
         <script>
+            window.fbAsyncInit = function () {
+                FB.init({
+                    appId: '272925143041233',
+                    xfbml: true,
+                    version: 'v2.6'
+                });
+            };
+
             (function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id))
+                if (d.getElementById(id)) {
                     return;
+                }
                 js = d.createElement(s);
                 js.id = id;
-                js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.6&appId=1697339473867169";
+                js.src = "//connect.facebook.net/en_US/sdk.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
@@ -100,14 +109,14 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             ga('create', 'UA-65285980-2', 'auto');
             ga('send', 'pageview');
         </script>
-        
+
         <!--Start Header section-->
         <?php echo $this->render('frontend/header'); ?>
 
         <!--End Header section-->
-        <?php echo $this->layout()->content; ?>
+<?php echo $this->layout()->content; ?>
         <!--Footer-->
-        <?php echo $this->render('frontend/footer'); ?>
+<?php echo $this->render('frontend/footer'); ?>
         <!--End Footer-->
     </body>
 </html>
