--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -52,7 +52,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             }
         </script>
 
-        <script>
+<!--        <script>
             window.fbAsyncInit = function () {
                 FB.init({
                     appId: '272925143041233',
@@ -72,11 +72,11 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
-        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>-->
     </head>
 
     <body>
-        <div id='chiase'>
+<!--        <div id='chiase'>
             <div style="margin:4px;">
                 <div class="fb-like" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
                 <br />
@@ -85,7 +85,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                     <g:plusone size="tall"></g:plusone>
                 </div>
             </div>
-        </div>
+        </div>-->
         <div id="fb-root"></div>
         <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
             <p id="loading_mask_loader" class="loader">
